--- a/config.ini
+++ b/config.ini
@@ -1,3 +1,6 @@
+# That file would be excluded from GIT but that project is not going live.
+# Even if that happens, it will look different :)
+
 [database_configuration]
 database_host = "localhost:8889"
 database_name = "dashboard"
